[workspace]
resolver = "3"
members = [ "p10171", "p10172", "p10699", "p10807", "p10869", "p10871", "p10872", "p10950", "p10951", "p10952", "p10998", "p11382", "p1152", "p11654", "p11718", "p14681", "p15552", "p15964", "p2420", "p2438", "p2475", "p25083",
    "p2557", "p2738", "p2739", "p2741", "p2743", "p2744", "p2753", "p2754", "p27866", "p5597", "p7287", "p9086", "p9489",
]
