[workspace]
resolver = "3"
members = [ "p10171", "p10172", "p1018", "p10250", "p10699", "p10807", "p10809", "p10814", "p10818", "p10869", "p10871", "p10872", "p10950", "p10951", "p10952", "p10989", "p10998", "p11050", "p11382", "p1152", "p11650", "p11651", "p11654", "p11718", "p11720", "p1181", "p1259", "p1436", "p14626", "p14681", "p1546", "p15552", "p15829", "p15964", "p1676", "p1978", "p2231", "p2292", "p2420", "p2438", "p2439", "p2475", "p25083",
    "p2557", "p2562", "p2577", "p2609", "p2675", "p2738", "p2739", "p2741", "p2743", "p2744", "p2751", "p2753", "p2754", "p2775", "p27866", "p2798", "p2869", "p28702", "p2884", "p2920", "p3052", "p30802", "p31403", "p5597", "p7287", "p7568", "p8958", "p9086", "p9489",
]
