[workspace]
resolver = "3"
members = ["p1003", "p10171", "p10172", "p1018", "p10250", "p10699", "p10773", "p10807", "p10809", "p10814", "p10816", "p10818", "p10828", "p10845", "p10869", "p10871", "p10872", "p10950", "p10951", "p10952", "p10989", "p10998", "p11047", "p11050", "p11382", "p11399", "p1152", "p11650", "p11651", "p11654", "p11718", "p11720", "p11723", "p1181", "p11866", "p1259", "p1436", "p14626", "p1463", "p14681", "p1546", "p15552", "p15829", "p15964", "p1620", "p1676", "p17219", "p1764", "p18110", "p1874", "p1920", "p1929", "p1966", "p1978", "p2108", "p2164", "p2231", "p2292", "p2420", "p2438", "p2439", "p2475", "p25083",
    "p2557", "p2562", "p2577", "p2579", "p2606", "p2609", "p2675", "p2738", "p2739", "p2741", "p2743", "p2744", "p2751", "p2753", "p2754", "p2775", "p27866", "p2798", "p2839", "p2869", "p28702", "p2884", "p2920", "p3052", "p30802", "p31403", "p4153", "p4949", "p5597", "p7287", "p7568", "p8958", "p9012", "p9086", "p9095", "p9489",
]
